--- a/blocks/advanced-columns/editor.scss
+++ b/blocks/advanced-columns/editor.scss
@@ -50,11 +50,8 @@
 			opacity: 0;
 			background: rgba(61,191,232,.15);
 			display: flex;
-			flex-wrap: wrap;
 			justify-content: center;
-			align-content: center;
-			position: absolute;
-			width: 100%;
+			align-items: center;
 			height: 100%;
 			transition: all ease-in 0.2s;
 
@@ -86,6 +83,22 @@
 	&.has-vertical-flex-end {
 		> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
 			align-self: flex-end;
+		}
+	}
+
+	.components-resizable-box__container {
+		.components-resizable-box__handle {
+			position: relative;
+			display: block;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			z-index: 9;
+
+			&:before {
+				display: none;
+			}
 		}
 	}
 }
