--- a/components/size-control/editor.scss
+++ b/components/size-control/editor.scss
@@ -48,6 +48,10 @@
 		padding: 10px;
 		width: 100%;
 
+		&:hover {
+			box-shadow: inset 0 0 0 1px #6c7781,inset 0 0 0 2px #fff;
+		}
+
 		&.is-selected {
 			background: #edeff0;
 		}
