More fixes and build
Fixed more issues from Radu's list and ran the build.

--- a/blocks/advanced-columns/editor.scss
+++ b/blocks/advanced-columns/editor.scss
@@ -93,6 +93,7 @@
 		> .innerblocks-wrap {
 			flex-basis: 100%;
 			width: 100%;
+			word-break: break-all;
 
 			> .editor-inner-blocks > .editor-block-list__layout {
 				display: flex;
@@ -202,6 +203,7 @@
 		> .innerblocks-wrap {
 			flex-basis: 100%;
 			width: 100%;
+			word-break: break-all;
 
 			> .editor-inner-blocks > .editor-block-list__layout {
 				display: flex;
@@ -338,6 +340,7 @@
 		> .innerblocks-wrap {
 			flex-basis: 100%;
 			width: 100%;
+			word-break: break-all;
 
 			> .editor-inner-blocks > .editor-block-list__layout {
 				display: flex;
