--- a/blocks/advanced-columns/style.scss
+++ b/blocks/advanced-columns/style.scss
@@ -72,6 +72,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
+			word-break: break-all;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
@@ -189,6 +190,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
+			word-break: break-all;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
@@ -326,6 +328,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
+			word-break: break-all;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
