Redo Font Awesome Icon Picker
Re-did Font Awesome icon picker to remove depencencies and use in-built components. Closes https://github.com/Codeinwp/gutenberg-blocks/issues/17

--- a/components/google-fonts-control/editor.scss
+++ b/components/google-fonts-control/editor.scss
@@ -1,4 +1,10 @@
 .wp-block-themeisle-blocks-google-fonts-popover {
+	&:not(.is-mobile) {
+		&.is-bottom {
+			z-index: 9999999;
+		}
+	}
+
 	.components-popover__content {
 		overflow-y: hidden;
 		
