--- a/components/icon-picker-control/editor.scss
+++ b/components/icon-picker-control/editor.scss
@@ -1,112 +1,76 @@
-.font-awesome-auto-complete {
-	label {
-		width: 15%;
-		margin-right: -4px;
-		border-radius: 3px 0 0 3px;
-		background: #ddd;
-		line-height: 30px;
-		text-align: center;
-		vertical-align: top;
-		display: inline-block;
+.wp-block-themeisle-blocks-icon-picker-popover {
+	&:not(.is-mobile) {
+		&.is-bottom {
+			z-index: 9999999;
+		}
 	}
 
-	.react-autosuggest__container {
-		display: contents;
+	.components-popover__content {
+		overflow-y: hidden;
+		
+		.components-popover__items {
+			max-height: 300px;
+			overflow-y: auto;
 
-		input {
-			width: 85%;
-			background: #ffffff;
-			display: inline-block;
-			font-size: 13px;
-			height: 30px;
-			box-shadow: 0 0 0 transparent;
-			transition: box-shadow .1s linear;
-			border-radius: 4px;
-			border: 1px solid #8d96a0;
-			border-radius: 0 5px 5px 0;
-			outline: 2px solid transparent;
-			outline-offset: -2px;
-			overflow: hidden;
-			padding: 5px 10px;
-			margin: 0;
+			button {
+				&.is-selected {
+					background: #f8f9f9;
+				}
 
-			&:focus {
-				color: #191e23;
-				border-color: #00a0d2;
-				box-shadow: 0 0 0 1px #00a0d2;
-				outline: 2px solid transparent;
-				outline-offset: -2px;
+				i {
+					margin-right: 5px;
+				}
 			}
 		}
+	}
+}
 
-		.react-autosuggest__suggestions-container {
-			display: none;
+.wp-block-themeisle-blocks-icon-picker-control {
+	.wp-block-themeisle-blocks-icon-picker-button {
+		background: transparent;
+		position: relative;
+		width: 100%;
+		box-shadow: 0 0 0 transparent;
+		transition: box-shadow .1s linear;
+		border-radius: 4px;
+		border: 1px solid #8d96a0;
+	
+		&.is-button {
+			background: transparent;
 		}
-
-		.react-autosuggest__suggestions-container--open {
+	
+		&:hover {
+			background: #fafafa;
+			border-color: #999;
+			box-shadow: inset 0 -1px 0 #999;
+			color: #23282d;
+			text-decoration: none;
+		}
+	
+		&:focus {
+			border: 1px solid black;
+		}
+	
+		&:after {
+			content: "";
+			pointer-events: none;
 			display: block;
-
-			ul {
-				display: block;
-				border: 1px solid #e2e4e7;
-				box-shadow: 0 3px 30px rgba(25, 30, 35, 0.1);
-				z-index: 5;
-				position: absolute;
-				margin: 10px 0 0 0;
-				padding: 2px;
-				max-height: calc(100vh - 120px);
-				max-width: 245px;
-				max-height: 300px;
-				height: auto;
-				overflow-y: auto;
-				background: white;
-				width: auto;
-
-				.icon-select {
-					&.selected {
-						border: 1px solid #000000;
-					}
-				}
-
-				li {
-					margin: 0;
-
-					&:hover {
-						background: #f2f2f2;
-						cursor: pointer;
-					}
-				}
-			}
-
-			&:before {
-				content: '';
-				position: absolute;
-				display: inline-block;
-				left: 16px;
-				border-bottom: 12px solid #e2e4e7;
-				border-left: 12px solid transparent;
-				border-right: 12px solid transparent;
-				z-index: 9;
-			}
-
-			&:after {
-				content: '';
-				position: absolute;
-				display: inline-block;
-				left: 17px;
-				border-bottom: 13px solid #fff;
-				border-left: 11px solid transparent;
-				border-right: 11px solid transparent;
-				z-index: 10;
-			}
+			width: 0;
+			height: 0;
+			border-left: 3px solid transparent;
+			border-right: 3px solid transparent;
+			border-top: 5px solid currentColor;
+			margin-left: 4px;
+			margin-right: 2px;
+			right: 8px;
+			top: 12px;
+			position: absolute;
 		}
 
-		.icon-select {
-			padding: 10px;
-
-			i {
-				margin-right: 10px;
-			}
+		i {
+			line-height: 1.8;
+			font-size: 15px;
+			margin-right: 5px;
 		}
 	}
 }
