Add feedback for Button Group switch, and more
Added a spinner as a feedback when you switch button in Button Group block, which fixes: https://github.com/Codeinwp/gutenberg-blocks/issues/36

Replace break-all with break-word for Column and Heading: https://github.com/Codeinwp/otter-blocks/issues/32

--- a/blocks/advanced-columns/editor.scss
+++ b/blocks/advanced-columns/editor.scss
@@ -93,7 +93,7 @@
 		> .innerblocks-wrap {
 			flex-basis: 100%;
 			width: 100%;
-			word-break: break-all;
+			word-break: break-word;
 
 			> .editor-inner-blocks > .editor-block-list__layout {
 				display: flex;
@@ -203,7 +203,7 @@
 		> .innerblocks-wrap {
 			flex-basis: 100%;
 			width: 100%;
-			word-break: break-all;
+			word-break: break-word;
 
 			> .editor-inner-blocks > .editor-block-list__layout {
 				display: flex;
@@ -340,7 +340,7 @@
 		> .innerblocks-wrap {
 			flex-basis: 100%;
 			width: 100%;
-			word-break: break-all;
+			word-break: break-word;
 
 			> .editor-inner-blocks > .editor-block-list__layout {
 				display: flex;
