--- a/blocks/advanced-columns/style.scss
+++ b/blocks/advanced-columns/style.scss
@@ -72,7 +72,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
-			word-break: break-all;
+			word-break: break-word;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
@@ -190,7 +190,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
-			word-break: break-all;
+			word-break: break-word;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
@@ -328,7 +328,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
-			word-break: break-all;
+			word-break: break-word;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
