--- a/components/google-fonts-control/editor.scss
+++ b/components/google-fonts-control/editor.scss
@@ -11,6 +11,16 @@
 		.components-popover__items {
 			max-height: 300px;
 			overflow-y: auto;
+
+			button {
+				&.is-selected {
+					background: #f8f9f9;
+				}
+
+				i {
+					margin-right: 5px;
+				}
+			}
 		}
 	}
 }
