--- a/blocks/advanced-columns/editor.scss
+++ b/blocks/advanced-columns/editor.scss
@@ -43,45 +43,6 @@
 			margin: 30px;
 		}
 	}
-
-	.components-resizable-box__container {
-
-		.block-space-size {
-			opacity: 0;
-			background: rgba(61,191,232,.15);
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 100%;
-			transition: all ease-in 0.2s;
-
-			span {
-				color: #2ea9d0;
-			}
-		}
-
-		&:hover {
-			.block-space-size {
-				opacity: 1;
-			}
-		}
-	}
-
-	.components-resizable-box__container {
-		.components-resizable-box__handle {
-			position: relative;
-			display: block;
-			width: 100%;
-			height: 100%;
-			top: 0;
-			left: 0;
-			z-index: 9;
-
-			&:before {
-				display: none;
-			}
-		}
-	}
 }
 
 @media ( min-width: 960px ) {
@@ -106,7 +67,7 @@
 				> [data-type="themeisle-blocks/advanced-column"] {
 					display: flex;
 					flex-direction: column;
-					flex: 1;
+					// flex: 1;
 					width: 0;
 		
 					.editor-block-list__block-edit {
@@ -117,14 +78,34 @@
 			}
 		}
 
+		&.has-1-columns {
+
+			&.has-desktop-equal-layout {
+	
+				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
+					flex-basis: 100%;
+				}
+			}
+		}
+
 		&.has-2-columns {
+
+			&.has-desktop-equal-layout {
+	
+				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
+					flex-basis: 50%;
+				}
+			}
 	
 			&.has-desktop-oneTwo-layout {
 	
 				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
-	
+					&:first-child {
+						flex-basis: 33.34%;
+					}
+
 					&:last-child {
-						flex: 2;
+						flex-basis: 66.66%;
 					}
 				}
 			}
@@ -132,9 +113,12 @@
 			&.has-desktop-twoOne-layout {
 	
 				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
-		
 					&:first-child {
-						flex: 2;
+						flex-basis: 66.66%;
+					}
+
+					&:last-child {
+						flex-basis: 33.34%;
 					}
 				}
 			}
@@ -142,12 +126,20 @@
 	
 		&.has-3-columns {
 	
+			&.has-desktop-equal-layout {
+	
+				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
+					flex-basis: 33.33%;
+				}
+			}
+
 			&.has-desktop-oneOneTwo-layout {
 	
 				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
-		
+					flex-basis: 25%;
+
 					&:last-child {
-						flex: 2;
+						flex-basis: 50%;
 					}
 				}
 			}
@@ -155,9 +147,10 @@
 			&.has-desktop-twoOneOne-layout {
 	
 				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
-		
+					flex-basis: 25%;
+
 					&:first-child {
-						flex: 2;
+						flex-basis: 50%;
 					}
 				}
 			}
@@ -165,14 +158,14 @@
 			&.has-desktop-oneTwoOne-layout {
 	
 				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
-					flex: 2;
+					flex-basis: 50%;
 		
 					&:first-child {
-						flex: 1;
+						flex-basis: 25%;
 					}
 	
 					&:last-child {
-						flex: 1;
+						flex-basis: 25%;
 					}
 				}
 			}
@@ -180,15 +173,79 @@
 			&.has-desktop-oneThreeOne-layout {
 	
 				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
-					flex: 3;
+					flex-basis: 60%;
 		
 					&:first-child {
-						flex: 1;
+						flex-basis: 20%;
 					}
 	
 					&:last-child {
-						flex: 1;
+						flex-basis: 20%;
 					}
+				}
+			}
+		}
+	
+		&.has-4-columns {
+	
+			&.has-desktop-equal-layout {
+	
+				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
+					flex-basis: 25%;
+				}
+			}
+		}
+	
+		&.has-5-columns {
+	
+			&.has-desktop-equal-layout {
+	
+				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
+					flex-basis: 20%;
+				}
+			}
+		}
+	
+		&.has-6-columns {
+	
+			&.has-desktop-equal-layout {
+	
+				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout > [data-type="themeisle-blocks/advanced-column"] {
+					flex-basis: 16.66%;
+				}
+			}
+		}
+	}
+
+	[data-type="themeisle-blocks/advanced-columns"] {
+
+		&.is-selected {
+			&:hover,
+			&:focus {
+				> .editor-block-list__block-edit {
+					.wp-themeisle-block-advanced-column-resize-container {
+						> span > .components-resizable-box__handle {
+							display: block;
+						}
+					}
+		
+				}
+			}
+		}
+	}
+	
+	[data-type="themeisle-blocks/advanced-column"] {
+	
+		&.is-selected {
+			&:hover,
+			&:focus {
+				> .editor-block-list__block-edit {
+					.wp-themeisle-block-advanced-column-resize-container {
+						> span > .components-resizable-box__handle {
+							display: block;
+						}
+					}
+		
 				}
 			}
 		}
@@ -471,8 +528,42 @@
 
 [data-type="themeisle-blocks/advanced-columns"] {
 
-	> .components-resizable-box__container {
+	.wp-themeisle-block-advanced-columns-resize-container {
 		width: 100% !important;
+
+		.block-space-size {
+			opacity: 0;
+			background: rgba(61,191,232,.15);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100%;
+			transition: all ease-in 0.2s;
+
+			span {
+				color: #2ea9d0;
+			}
+		}
+
+		&:hover {
+			.block-space-size {
+				opacity: 1;
+			}
+		}
+
+		.components-resizable-box__handle {
+			position: relative;
+			display: block;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			z-index: 9;
+
+			&:before {
+				display: none;
+			}
+		}
 
 		.components-resizable-box__handle-top {
 			display: block;
@@ -513,6 +604,80 @@
 	
 			&:before {
 				display: none;
+			}
+		}
+	}
+}
+
+
+	
+[data-type="themeisle-blocks/advanced-column"] {
+	
+	.wp-themeisle-block-advanced-column-resize-container {
+		width: 100% !important;
+
+		> span  > .components-resizable-box__handle-right {
+			background: #0085ba;
+			display: none;
+			width: 2px;
+			height: 100%;
+			top: 0;
+			right: -15.5px;
+			padding: 0;
+			z-index: 9999;
+
+			&:before {
+				background: #0085ba;
+				position: absolute;
+				top: calc(50% - 8px);
+				left: -7px;
+			}
+
+			.resizable-tooltip {
+				position: absolute;
+				top: 50%;
+				color: #fff;
+				font-size: 10px;
+				font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
+				background-color: #0085ba;
+				width: 50px;
+				height: 20px;
+				padding: 3.5px 0;
+				text-align: center;
+				z-index: 1;
+				line-height: 1;
+
+				&:after {
+					border: 10px solid transparent;
+					content: "";
+					position: absolute;
+					width: 0;
+					height: 0;
+					top: 0;
+				}
+			}
+
+			.resizable-tooltip-left {
+				right: 0;
+				transform: translateY(-50%);
+				margin-right: 20px;
+
+				&:after {
+					left: 100%;
+					border-left-color: #0085ba;
+					border-right-width: 0;
+				}
+			}
+
+			.resizable-tooltip-right {
+				transform: translateY(-50%);
+				margin-left: 20px;
+
+				&:after {
+					right: 100%;
+					border-right-color: #0085ba;
+					border-left-width: 0;
+				}
 			}
 		}
 	}
