--- a/src/blocks/font-awesome-icons/editor.scss
+++ b/src/blocks/font-awesome-icons/editor.scss
@@ -1,3 +1,13 @@
 .wp-block-themeisle-blocks-font-awesome-icons {
-  text-align: center;
+	text-align: center;
+}
+
+.wp-block-themeisle-blocks-font-awesome-icons-hover-control {
+	width: 100%;
+	margin-bottom: 20px;
+
+	.components-button {
+		width: calc( 100% / 2 );
+		justify-content: center;
+	}
 }
