--- a/src/blocks/advanced-columns/style.scss
+++ b/src/blocks/advanced-columns/style.scss
@@ -72,7 +72,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
-			word-break: break-word;
+			word-break: keep-all;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
@@ -259,7 +259,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
-			word-break: break-word;
+			word-break: keep-all;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
@@ -397,7 +397,7 @@
 		.innerblocks-wrap {
 			display: flex;
 			flex-basis: 100%;
-			word-break: break-word;
+			word-break: keep-all;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				position: relative;
