--- a/src/blocks/google-map/editor.scss
+++ b/src/blocks/google-map/editor.scss
@@ -17,10 +17,91 @@
 		}
 	}
 
-	.components-placeholder__fieldset {
-	
-		.components-placeholder__instructions {
-			margin-top: 1em;
+	.components-placeholder {
+		padding: 50px 15px;
+
+		.components-placeholder__fieldset {		
+			.components-placeholder__instructions {
+				margin-top: 1em;
+			}
 		}
+	}
+}
+
+.wp-block-themeisle-blocks-google-map-search {
+	width: 100%;
+}
+
+.wp-block-themeisle-blocks-google-map-marker-group {
+	margin: 0 0 20px;
+
+	.wp-block-themeisle-blocks-google-map-marker {
+		margin: 10px 0;
+
+		.wp-block-themeisle-blocks-google-map-marker-title-area {
+			display: flex;
+			border: 1px solid #d5dadf;
+	
+			&:hover {
+				border-color: #a4afb7;
+			}
+	
+			.wp-block-themeisle-blocks-google-map-marker-title {
+				flex-basis: 80%;
+				padding: 10px 15px;
+				cursor: pointer;
+	
+				&:hover {
+					background: #fafafb;
+				}
+			}
+	
+			.wp-block-themeisle-blocks-google-map-marker-remove {
+				display: flex;
+				flex-basis: 20%;
+				justify-content: center;
+				padding: 10px 5px;
+				border-left: 1px solid #d5dadf;
+				cursor: pointer;
+	
+				&:hover {
+					background: #fafafb;
+					border-radius: 0;
+					box-shadow: none;
+				}
+			}
+		}
+
+		.wp-block-themeisle-blocks-google-map-marker-control-area {
+			border: 1px solid #d5dadf;
+			border-top: none;
+			padding: 10px 15px;
+			display: none;
+
+			&.opened {
+				display: block;
+			}
+		}
+	}
+}
+
+.wp-block-themeisle-blocks-google-map-marker-add {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+
+.themeisle-map-overview {
+	h6.themeisle-map-title {
+		font-size: 14px;
+		margin: 10px 0;
+	}
+
+	.themeisle-map-content p {
+		font-size: 12px;
+	}
+
+	.themeisle-map-delete {
+		cursor: pointer;
 	}
 }
