--- a/src/blocks/google-map/style.scss
+++ b/src/blocks/google-map/style.scss
@@ -1,14 +1,18 @@
-.themeisle-map-overview {
-	h6.themeisle-map-title {
+.wp-block-themeisle-blocks-google-map {
+	margin: 20px 0;
+}
+
+.wp-block-themeisle-blocks-map-overview {
+	h6.wp-block-themeisle-blocks-map-overview-title {
 		font-size: 14px;
 		margin: 10px 0;
 	}
 
-	.themeisle-map-content p {
+	.wp-block-themeisle-blocks-map-overview-content p {
 		font-size: 12px;
 	}
 
-	.themeisle-map-delete {
+	.wp-block-themeisle-blocks-map-overview-delete {
 		cursor: pointer;
 	}
 }
