--- a/src/blocks/post-grid/style.scss
+++ b/src/blocks/post-grid/style.scss
@@ -1,151 +1,158 @@
-.wp-block-themeisle-blocks-posts-grid {
+.wp-block-themeisle-blocks-posts {
 	display: flex;
 	flex-wrap: wrap;
 
 	&.is-grid {
-		.grid-post {
-			.grid-post-row {
 
-				.grid-image-area {
-					flex: 0 0 100%;
-					max-width: 100%;
-				}
-		
-				.grid-content-area {
-					flex: 0 0 100%;
-					max-width: 100%;
-
-					.grid-content-category {
-						margin: 10px 0;
-					}
-				}
-			}
-
-			&.grid-2 {
+		&.posts-grid-columns-2 {
+			.posts-grid-post-blog {
 				flex: 0 0 50%;
 				max-width: 50%;
-				padding: 0 15px;
 			}
-
-			&.grid-3 {
+		}
+	
+		&.posts-grid-columns-3 {
+			.posts-grid-post-blog {
 				flex: 0 0 33%;
 				max-width: 33%;
-				padding: 0 15px;
 			}
-
-			&.grid-4 {
+		}
+	
+		&.posts-grid-columns-4 {
+			.posts-grid-post-blog {
 				flex: 0 0 25%;
 				max-width: 25%;
-				padding: 0 15px;
 			}
-
-			&.grid-5 {
+		}
+	
+		&.posts-grid-columns-5 {
+			.posts-grid-post-blog {
 				flex: 0 0 20%;
 				max-width: 20%;
-				padding: 0 15px;
 			}
 		}
 	}
 
-	.grid-post {
-		margin: 20px 0;
-		background: transparent;
-		box-shadow: none;
-		border: 0;
-		border-radius: 6px;
-		color: rgba(0,0,0,.87);
-		width: 100%;
-
-		.grid-post-row {
+	&.is-list {
+		.posts-grid-post {
 			display: flex;
-			flex-wrap: wrap;
-			margin-right: -15px;
-			margin-left: -15px;
+	
+			.posts-grid-post-image {
+				flex-basis: 33.33%;
+				padding: 20px;
+			}
+	
+			.posts-grid-post-body {
+				flex-basis: 66.66%;
+				padding-top: 20px;
+			}
+		}
+	}
 
-			.grid-image-area {
-				flex: 0 0 33.333333%;
-				max-width: 33.333333%;
+	.posts-grid-post-blog {
+		width: 100%;
+		position: relative;
+		margin-bottom: 30px;
+		padding: 10px 20px;
+		display: inline-block;
+		border: 0;
+		position: relative;
+		word-wrap: break-word;
+		background-color: #fff;
+		background-clip: border-box;
+
+		.posts-grid-post {
+			margin-bottom: 10px;
+
+			.posts-grid-post-image {
 				position: relative;
-				width: 100%;
-				min-height: 1px;
-				padding-right: 15px;
-				padding-left: 15px;
-
-				.post-thumbnail {
-					position: relative;
-					padding: 0;
-					z-index: 1;
-					border-radius: 6px;
-
-					img {
-						width: 100%;
-						border-radius: 6px;
-						box-shadow: 0 5px 15px 5px rgba(0,0,0,.24),0 8px 10px -5px rgba(0,0,0,.2);
-					}
+	
+				img {
+					box-shadow: 0 10px 25px 0 rgba( 0, 0, 0, .2 );
+					max-width: 100%;
+					border-radius: 5px;
 				}
 			}
 
-			.grid-content-area {
-				flex: 0 0 66.666667%;
-				max-width: 66.666667%;
-				position: relative;
-				width: 100%;
-				min-height: 1px;
-				padding-right: 15px;
-				padding-left: 15px;
+			.posts-grid-post-body {
 
-				&.full {
-					flex: 0 0 100%;
-					max-width: 100%;
+				&.is-full {
+					flex-basis: 100%;
 				}
-
-				.grid-content-category {
-					font-size: 11px;
-					font-weight: bold;
-					margin: 0;
-
-					a {
-						color: #000000;
-						text-decoration: none;
-					}
+	
+				.posts-grid-post-category {
+					font-size: 12px;
+					text-transform: capitalize;
+					font-weight: 700;
+					margin: 5px 0;
 				}
-
-				.grid-content-title {
-					font-size: 16px;
-					font-weight: bold;
-					margin: 0;
-
+		
+				.posts-grid-post-title {
+					font-size: 18px;
+					margin: 10px 0;
+					line-height: 1.25em;
+		
 					a {
 						text-decoration: none;
+						transition: all .15s ease 0s;
+		
+						&:hover {
+							text-decoration: underline;
+						}
 					}
 				}
-
-				.grid-content-meta {
-					margin: 0;
+		
+				.posts-grid-post-meta {
 					font-size: 14px;
-
-					a {
-						color: #000000;
-					}
+					margin: 10px 0;
 				}
+		
+				.posts-grid-post-description {
+					font-size: 16px;
+					margin: 10px 0;
+				}}
+		}
+	}
+}
 
-				.grid-content-excerpt {
-					line-height: 1.5;
-					margin: 1em 0;
-				}
+@media ( min-width: 600px ) and ( max-width: 960px )  {
+	.wp-block-themeisle-blocks-posts {
+		display: flex;
+		flex-wrap: wrap;
+	
+		&.is-grid {
+			.posts-grid-post-blog {
+				min-width: 33%;
 			}
 		}
 	}
 }
 
-@media ( max-width:600px ) {
-	.wp-block-themeisle-blocks-posts-grid {
-
+@media ( max-width: 600px )  {
+	.wp-block-themeisle-blocks-posts {
+		display: flex;
+		flex-wrap: wrap;
+	
 		&.is-grid {
-			.grid-post {
-				flex: 0 0 100% !important;
-				max-width: 100% !important;
-				padding: 0 !important;
+			.posts-grid-post-blog {
+				min-width: 100%;
+			}
+		}
+	
+		&.is-list {
+			.posts-grid-post {
+				flex-direction: column;
+				padding: 10px;
+
+				.posts-grid-post-image {
+					flex-basis: 100%;
+					padding: 0;
+				}
+	
+				.posts-grid-post-body {
+					flex-basis: 100%;
+					padding: 0;
+				}
 			}
 		}
 	}
