--- a/src/blocks/post-grid/editor.scss
+++ b/src/blocks/post-grid/editor.scss
@@ -131,6 +131,10 @@
 			flex-basis: 80%;
 			padding-left: 15px;
 		}
+
+		&:hover {
+			background: #ffffff;
+		}
 	}
 
 	.wp-block-themeisle-blocks-posts-grid-builder-handle {
@@ -139,7 +143,7 @@
 		align-self: center;
 		flex-basis: 20%;
 		padding: 15px 0;
-		cursor: row-resize;
+		cursor: grabbing;
 
 		span {
 			display: flex;
@@ -147,7 +151,6 @@
 			width: 18px;
 			height: 11px;
 			background: linear-gradient(180deg,#000,#000 20%,#fff 0,#fff 40%,#000 0,#000 60%,#fff 0,#fff 80%,#000 0,#000);
-			opacity: 0.5;
 		}
 	}
 
