--- a/src/components/sizing-control/editor.scss
+++ b/src/components/sizing-control/editor.scss
@@ -17,6 +17,7 @@
 				width: 100%;
 				border-radius: 0;
 				text-align: center;
+				padding: 5px;
 
 				&[disabled] {
 					background-color: #e6e9ec;
