Improve Link Component
Improved Link Component by adding a suggestions from Posts/Pages. Closes https://github.com/Codeinwp/gutenberg-blocks/issues/106

--- a/src/components/link-control/editor.scss
+++ b/src/components/link-control/editor.scss
@@ -40,3 +40,24 @@
 		}
 	}
 }
+
+.components-popover {
+	&.is-bottom {
+		&.wp-block-themeisle-blocks-link-control-popover {
+			z-index: 1000000;
+		
+			.wp-block-themeisle-blocks-link-control-popover-container {
+				max-height: 200px;
+				overflow-y: auto;
+
+				.block-editor-url-input__suggestion {
+					&.is-selected {
+						background: #00719e;
+						color: #fff;
+						outline: none;
+					}
+				}
+			}
+		}
+	}
+}
