Hide resizer in Google Map if unselected
Hide resizer for Google Map block if the block is not selected.

--- a/src/blocks/google-map/editor.scss
+++ b/src/blocks/google-map/editor.scss
@@ -117,9 +117,12 @@
 }
 
 .wp-block-themeisle-blocks-google-map-resizer {
-	.components-resizable-box__handle {
-		display: block;
-		z-index: 1;
+
+	&.is-focused {
+		.components-resizable-box__handle {
+			display: block;
+			z-index: 1;
+		}
 	}
 
 	.wp-block-themeisle-blocks-google-map-center {
