--- a/src/components/template-library/editor.scss
+++ b/src/components/template-library/editor.scss
@@ -137,7 +137,7 @@
 	
 			.library-modal-actions {
 				display: flex;
-				padding: 15px;
+				padding: 20px 15px;
 				background: #f2f2f3;
 				justify-content: center;
 	
@@ -160,6 +160,7 @@
 		
 				.library-modal-search-control {
 					min-width: 200px;
+					margin-bottom: 0;
 					position: relative;
 		
 					&:after {
