Add Map Styles to Google Map Block
This adds six predefined styles for Google Map block to make the
functionality similar to Intergeo. Closes https://github.com/Codeinwp/gutenberg-blocks/issues/122

--- a/src/components/style-switcher-control/editor.scss
+++ b/src/components/style-switcher-control/editor.scss
@@ -1,5 +1,7 @@
 .wp-block-themeisle-blocks-style-switcher {
-	display: flex;
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-row-gap: 5px;
 
 	.blocks-style-switcher-item {
 		display: block;
