Add inserter to Button Group
This will add an inserter to make it easier for users to add additional
buttons. https://github.com/Codeinwp/gutenberg-blocks/issues/129

--- a/src/blocks/button-group/editor.scss
+++ b/src/blocks/button-group/editor.scss
@@ -136,6 +136,11 @@
 		overflow-wrap: break-word;
 		height: 100%;
 	}
+
+	.wp-block-themeisle-blocks-button-inserter {
+		align-self: center;
+		margin-left: 10px;
+	}
 }
 
 .wp-block-themeisle-blocks-button-group-hover-control {
