Fix sizing input length

--- a/src/components/sizing-control/editor.scss
+++ b/src/components/sizing-control/editor.scss
@@ -15,6 +15,7 @@
 		.wp-block-themeisle-blocks-sizing-control-item {
 			.wp-block-themeisle-blocks-sizing-control-item-input {
 				width: 100%;
+				min-height: 28px;
 				border-radius: 0;
 				text-align: center;
 				padding: 5px;
