Improve Section Onboarding Experience
This does the following:

- Uses new icons for pre-defined column layouts.
- Makes the Template Library button smaller.
- Adds a Skip button to Section, similar to Core.
- Uses a transparent background to appear more in line with Core.

Closes https://github.com/Codeinwp/gutenberg-blocks/issues/144

--- a/src/blocks/section/components/layout-control/editor.scss
+++ b/src/blocks/section/components/layout-control/editor.scss
@@ -31,7 +31,7 @@
 
 	.wp-block-themeisle-blocks-advanced-column-layout {
 		cursor: pointer;
-		width: 50%;
+		width: calc( 100% / 3 );
 		display: inline-block;
 		padding: 5px 5px 0px;
 
@@ -42,7 +42,7 @@
 		&:hover {
 
 			svg {
-				fill: #6d7882;
+				fill: #0075af;
 			}
 		}
 
