[WiP] React Hooks
This commit converts all the custom Components to use React Hooks.

--- a/src/blocks/section/components/onboarding/editor.scss
+++ b/src/blocks/section/components/onboarding/editor.scss
@@ -12,6 +12,10 @@
 		}
 	}
 
+	.components-placeholder__fieldset {
+		flex-direction: column;
+	}
+
 	.wp-block-themeisle-layout-picker {
 		display: flex;
 		justify-content: center;
