--- a/src/blocks/about-author/editor.scss
+++ b/src/blocks/about-author/editor.scss
@@ -39,6 +39,23 @@
 	}
 }
 
+.wp-block-themeisle-author-loading {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+    min-height: 200px;
+    text-align: center;
+	background: #f8f9f9;
+
+	.wp-block-themeisle-author-loading-text {
+		font-size: 13px;
+		font-family: -apple-system, BlinkMacSystemFont,"Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell,"Helvetica Neue", sans-serif;
+		margin: 10px;
+	}
+}
+
 @media ( max-width:961px ) {
 	.wp-block-themeisle-blocks-about-author {
 		display: inline-block;
