--- a/src/blocks/sharing-icons/editor.scss
+++ b/src/blocks/sharing-icons/editor.scss
@@ -21,35 +21,45 @@
 		&.is-facebook {
 			background-color: #3b5998;
 			border-color: #3b5998;
+			color: #ffffff;
 		}
 
 		&.is-twitter {
 			background-color: #55acee;
 			border-color: #55acee;
+			color: #ffffff;
 		}
 
 		&.is-linkedin {
 			background-color: #0976b4;
 			border-color: #0976b4;
+			color: #ffffff;
 		}
 
 		&.is-pinterest {
 			background-color: #cc2127;
 			border-color: #cc2127;
+			color: #ffffff;
 		}
 
 		&.is-tumblr {
 			background-color: #35465c;
 			border-color: #35465c;
+			color: #ffffff;
 		}
 
 		&.is-reddit {
 			background-color: #ff4500;
 			border-color: #ff4500;
+			color: #ffffff;
 		}
 
 		&:hover {
 			box-shadow: 0 14px 26px -12px rgba(59, 89, 152, 0.42), 0 4px 23px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(59, 89, 152, 0.2);
+		}
+
+		a {
+			color: #ffffff;
 		}
 
 		i {
