--- a/src/blocks/sharing-icons/style.scss
+++ b/src/blocks/sharing-icons/style.scss
@@ -21,31 +21,37 @@
 		&.is-facebook {
 			background-color: #3b5998;
 			border-color: #3b5998;
+			color: #ffffff;
 		}
 
 		&.is-twitter {
 			background-color: #55acee;
 			border-color: #55acee;
+			color: #ffffff;
 		}
 
 		&.is-linkedin {
 			background-color: #0976b4;
 			border-color: #0976b4;
+			color: #ffffff;
 		}
 
 		&.is-pinterest {
 			background-color: #cc2127;
 			border-color: #cc2127;
+			color: #ffffff;
 		}
 
 		&.is-tumblr {
 			background-color: #35465c;
 			border-color: #35465c;
+			color: #ffffff;
 		}
 
 		&.is-reddit {
 			background-color: #ff4500;
 			border-color: #ff4500;
+			color: #ffffff;
 		}
 
 		&:hover {
